# bluemchen-test-app-rust

./: Cargo.toml  memory.x
.cargo/: config
.github/workflows/: build.yaml
src/: main.rs
