[package]
name = "bluemchen-test-app-rust"
version = "0.1.0"
authors = ["Colin Clark <colinbdclark@gmail.com>"]
edition = "2018"

[dependencies]
libdaisy = "0.1.0"
cortex-m = "0.6.2"
cortex-m-rtic = "0.5.6"
log = "0.4.11"
stm32h7xx-hal = {version = "0.9.0", features = ["stm32h750v", "rt","fmc"]}
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
